bundle/manifests/vcf-migration-operator-allow-dns-egress_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: vcf-migration-operator
  name: vcf-migration-operator-allow-dns-egress
spec:
  egress:
  - ports:
    - port: 5353
      protocol: TCP
    - port: 5353
      protocol: UDP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vcf-migration-operator
      control-plane: controller-manager
  policyTypes:
  - Egress
