bundle/manifests/vcf-migration-operator-default-deny-operator-traffic_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: vcf-migration-operator
  name: vcf-migration-operator-default-deny-operator-traffic
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vcf-migration-operator
      control-plane: controller-manager
  policyTypes:
  - Ingress
  - Egress
